--- a/schedule.html
+++ b/schedule.html
@@ -10,7 +10,7 @@
 
 <nav class="bg-white border-gray-200 dark:bg-gray-900">
   <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
-    <a href="https://flowbite.com/" class="flex items-center space-x-3 rtl:space-x-reverse">
+    <a href="https://football2-dd6v.onrender.com" class="flex items-center space-x-3 rtl:space-x-reverse">
         <img src="https://img.freepik.com/free-psd/soccer-ball-isolated_23-2151387865.jpg" class="h-8" alt="Flowbite Logo" />
         <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white">FootClub</span>
     </a>
