--- a/about.html
+++ b/about.html
@@ -199,7 +199,7 @@
                     <a href="schedule.html" class="hover:underline me-4 md:me-6">Расписание</a>
                 </li>
                 <li>
-                    <a href="contact.html" class="hover:underline">Контакты</a>
+                    <a href="Contact.html" class="hover:underline">Контакты</a>
                 </li>
             </ul>
         </div>
