--- a/about.html
+++ b/about.html
@@ -125,17 +125,17 @@
             {
                 title: "Роналду установил новый рекорд",
                 description: "Криштиану Роналду забил свой 800-й гол в карьере, установив новый мировой рекорд.",
-                link: "https://example.com/news/ronaldo-record"
+                link: "https://www.euro-football.ru/article/1003876948/1005878779_40-letniy_ronaldu_ustanovil_novyiy_mirovoy_rekord"
             },
             {
                 title: "Месси выиграл Чемпионат мира",
                 description: "Лионель Месси наконец-то завоевал титул чемпиона мира, принеся победу Аргентине.",
-                link: "https://example.com/news/messi-world-cup"
+                link: "https://www.olympics.com/ru/news/messi-zabivaet-rekordnyi-gol-na-chempionate-mira-2022"
             },
             {
                 title: "Новый тренер Реала",
                 description: "Карло Анчелотти назначен главным тренером Реала Мадрид на следующий сезон.",
-                link: "https://example.com/news/new-real-coach"
+                link: "https://football24.ru/articles/248703-karlo-anchelotti-esche-blizhe-k-otstavke-shest-kandidatov-na-mesto-trenera-reala.html"
             }
         ];
 
