--- a/schedule.html
+++ b/schedule.html
@@ -126,3 +126,29 @@
     </div>
   </div>
 </section>
+
+    <div class="w-full max-w-screen-xl mx-auto p-4 md:py-8">
+        <div class="sm:flex sm:items-center sm:justify-between">
+            <a href="" class="flex items-center mb-4 sm:mb-0 space-x-3 rtl:space-x-reverse">
+                <img src="" class="h-8" alt="" />
+                <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white"></span>
+            </a>
+            <ul class="flex flex-wrap items-center mb-6 text-sm font-medium text-gray-500 sm:mb-0 dark:text-gray-400">
+                <li>
+                    <a href="index.html" class="hover:underline me-4 md:me-6">Главная</a>
+                </li>
+                <li>
+                    <a href="prise.html" class="hover:underline me-4 md:me-6">Цены</a>
+                </li>
+                <li>
+                    <a href="about.html" class="hover:underline me-4 md:me-6">О футболе</a>
+                </li>
+                <li>
+                    <a href="Contact.html" class="hover:underline">Контакты</a>
+                </li>
+            </ul>
+        </div>
+        <hr class="my-6 border-gray-200 sm:mx-auto dark:border-gray-700 lg:my-8" />
+        <span class="block text-sm text-gray-500 sm:text-center dark:text-gray-400">© 2025 <a href="https://football2-dd6v.onrender.com/" class="hover:underline">FootClub™</a>. Все права защищены.</span>
+    </div>
+</footer>
