--- a/about.html
+++ b/about.html
@@ -123,19 +123,19 @@
         // Массив с примерными новостями (можно заменить на данные из API)
         const newsData = [
             {
-                title: "Роналду установил новый рекорд",
-                description: "Криштиану Роналду забил свой 800-й гол в карьере, установив новый мировой рекорд.",
-                link: "https://www.euro-football.ru/article/1003876948/1005878779_40-letniy_ronaldu_ustanovil_novyiy_mirovoy_rekord"
+                title: "Вратарь-гигант уйдёт из «Металлурга» в «Рязань»",
+                description: "Вратарь «Металлурга» Дмитрий Вялов намерен продолжить карьеру в «Рязани», которая станет соперницей липчан в предстоящем сезоне.",
+                link: "https://gorod48.ru/news/1966335/"
             },
             {
-                title: "Месси выиграл Чемпионат мира",
-                description: "Лионель Месси наконец-то завоевал титул чемпиона мира, принеся победу Аргентине.",
-                link: "https://www.olympics.com/ru/news/messi-zabivaet-rekordnyi-gol-na-chempionate-mira-2022"
+                title: "Футбол. Все голы Криштиану Роналду на чемпионатах мира",
+                description: "Португальский форвард стал первым футболистом, который забил голы на 5 чемпионатах мира",
+                link: "https://www.olympics.com/ru/news/futbol-krishtianu-ronaldu-na-chempionatah-mira"
             },
             {
-                title: "Новый тренер Реала",
-                description: "Карло Анчелотти назначен главным тренером Реала Мадрид на следующий сезон.",
-                link: "https://football24.ru/articles/248703-karlo-anchelotti-esche-blizhe-k-otstavke-shest-kandidatov-na-mesto-trenera-reala.html"
+                title: "Константин Гусев, OLIMPBET: «Футбол остается самым популярным видом спорта в России»",
+                description: "ВЦИОМ сообщил о снижении интереса к футболу: доля болельщиков упала с 19% в 2005 году до 4% в 2024-м. Минспорта оспорил объективность данных, ссылаясь на стабильную посещаемость матчей. О реальной популярности футбола «НИ» рассказал директор по развитию OLIMPBET Константин Гусев.",
+                link: "https://newizv.ru/news/2024-10-04/konstantin-gusev-olimpbet-futbol-ostaetsya-samym-populyarnym-vidom-sporta-v-rossii-433588"
             }
         ];
 
