--- a/index.html
+++ b/index.html
@@ -41,4 +41,95 @@
   </div>
 </nav>
 
-</body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Футбольный Клуб</title>
+  <script src="https://cdn.tailwindcss.com"></script>
+</head>
+<body class="bg-white text-gray-900 font-sans">
+
+  <!-- Навигационная панель -->
+  <nav class="bg-blue-600 shadow-lg">
+    <div class="container mx-auto px-6 py-4 flex justify-between items-center">
+      <a href="#" class="text-2xl font-bold text-white"></a>
+      <ul class="flex space-x-6">
+
+      </ul>
+    </div>
+  </nav>
+
+  <!-- Главный баннер -->
+  <header class="bg-cover bg-center h-screen" style="background-image: url('https://images.unsplash.com/photo-1517962785197-5be8b2daab29?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1170&q=80');">
+    <div class="container mx-auto px-6 h-full flex flex-col justify-center">
+      <h1 class="text-5xl font-bold text-black mb-4">Добро пожаловать в ФК "FootClub"</h1>
+      <p class="text-xl text-black mb-6">Страсть, мощь и победы на поле!</p>
+      <a href="#about" class="bg-blue-600 text-white px-6 py-3 rounded-full hover:bg-blue-700 transition duration-300">Узнать больше</a>
+    </div>
+  </header>
+
+  <!-- О команде -->
+  <section id="about" class="py-16 bg-gray-100">
+    <div class="container mx-auto px-6">
+      <h2 class="text-3xl font-bold text-center text-gray-900 mb-8">О нашей команде</h2>
+      <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
+        <div class="flex flex-col justify-center">
+          <p class="text-lg text-gray-700">
+            ФК "FootClub" — это команда, которая объединяет лучших игроков Калининградской области. Мы стремимся к победам, развиваем молодые таланты и создаем атмосферу настоящей футбольной семьи. Присоединяйтесь к нам и станьте частью легенды!
+          </p>
+        </div>
+        <div>
+          <img src="https://cdnstatic.rg.ru/uploads/images/gallery/823ab2fe/2_6c8bb434.jpg" alt="Команда" class="rounded-lg shadow-lg">
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Новости -->
+  <section id="news" class="py-16 bg-white">
+    <div class="container mx-auto px-6">
+      <h2 class="text-3xl font-bold text-center text-gray-900 mb-8">Последние новости</h2>
+      <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
+        <article class="bg-gray-50 p-6 rounded-lg shadow-lg">
+          <h3 class="text-xl font-bold text-gray-900 mb-2">Новая победа в чемпионате</h3>
+          <p class="text-gray-700">Наша команда одержала впечатляющую победу со счетом 3:1 в матче против "Спартака".</p>
+        </article>
+        <article class="bg-gray-50 p-6 rounded-lg shadow-lg">
+          <h3 class="text-xl font-bold text-gray-900 mb-2">Трансферная кампания</h3>
+          <p class="text-gray-700">В этом сезоне мы усилили состав новыми игроками, которые уже показывают отличные результаты.</p>
+        </article>
+        <article class="bg-gray-50 p-6 rounded-lg shadow-lg">
+          <h3 class="text-xl font-bold text-gray-900 mb-2">Благотворительный матч</h3>
+          <p class="text-gray-700">ФК "Виктория" проведет благотворительный матч в поддержку местного детского дома.</p>
+        </article>
+      </div>
+    </div>
+  </section>
+
+ <div class="w-full max-w-screen-xl mx-auto p-4 md:py-8">
+        <div class="sm:flex sm:items-center sm:justify-between">
+            <a href="" class="flex items-center mb-4 sm:mb-0 space-x-3 rtl:space-x-reverse">
+                <img src="" class="h-8" alt="" />
+                <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white"></span>
+            </a>
+            <ul class="flex flex-wrap items-center mb-6 text-sm font-medium text-gray-500 sm:mb-0 dark:text-gray-400">
+                <li>
+                    <a href="schedule.html" class="hover:underline me-4 md:me-6">Расписание</a>
+                </li>
+                <li>
+                    <a href="prise.html" class="hover:underline me-4 md:me-6">Цены</a>
+                </li>
+                <li>
+                    <a href="about.html" class="hover:underline me-4 md:me-6">О футболе</a>
+                </li>
+                <li>
+                    <a href="Contact.html" class="hover:underline">Контакты</a>
+                </li>
+            </ul>
+        </div>
+        <hr class="my-6 border-gray-200 sm:mx-auto dark:border-gray-700 lg:my-8" />
+        <span class="block text-sm text-gray-500 sm:text-center dark:text-gray-400">© 2025 <a href="https://football2-dd6v.onrender.com/" class="hover:underline">FootClub™</a>. Все права защищены.</span>
+    </div>
+</footer>
