--- a/Contact.html
+++ b/Contact.html
@@ -41,7 +41,35 @@
     </div>
   </div>
 </nav>
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Сайт с синей полосой</title>
+  <style>
+    body {
+      margin: 0;
+      font-family: Arial, sans-serif;
+    }
 
+    .top-bar {
+      width: 100%;
+      height: 50px; /* высота полосы */
+      background-color: #007BFF; /* синий цвет */
+    }
+
+    .content {
+      padding: 20px;
+    }
+  </style>
+</head>
+<body>
+
+  <div class="top-bar"></div>
+
+  <div class="content">
+   
 </body>
 </html>
 <!DOCTYPE html>
