--- a/about.html
+++ b/about.html
@@ -18,6 +18,7 @@
         <svg class="w-5 h-5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 17 14">
             <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 1h15M1 7h15M1 13h15"/>
         </svg>
+
     </button>
     <div class="hidden w-full md:block md:w-auto" id="navbar-default">
       <ul class="font-medium flex flex-col p-4 md:p-0 mt-4 border border-gray-100 rounded-lg bg-gray-50 md:flex-row md:space-x-8 rtl:space-x-reverse md:mt-0 md:border-0 md:bg-white dark:bg-gray-800 md:dark:bg-gray-900 dark:border-gray-700">
@@ -36,6 +37,7 @@
         <li>
           <a href="Contact.html" class="block py-2 px-3 text-gray-900 rounded-sm hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Контакты</a>
         </li>
+
       </ul>
     </div>
   </div>
@@ -107,9 +109,43 @@
             font-size: 18px;
             color: #777;
         }
+
     </style>
 </head>
 <body>
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Сайт с синей полосой</title>
+  <style>
+    body {
+      margin: 0;
+      font-family: Arial, sans-serif;
+    }
+
+    .top-bar {
+      width: 100%;
+      height: 50px; /* высота полосы */
+      background-color: #007BFF; /* синий цвет */
+    }
+
+    .content {
+      padding: 20px;
+    }
+  </style>
+</head>
+<body>
+
+  <div class="top-bar"></div>
+
+  <div class="content">
+   
+  </div>
+
+</body>
+</html>
     <!-- Секция новостей -->
     <section class="news-section" id="news">
         <h2>Последние новости</h2>
@@ -118,7 +154,7 @@
             <p class="loading">Загрузка новостей...</p>
         </div>
     </section>
-
+l>
     <script>
         // Массив с примерными новостями (можно заменить на данные из API)
         const newsData = [
@@ -207,4 +243,28 @@
         <span class="block text-sm text-gray-500 sm:text-center dark:text-gray-400">© 2025 <a href="https://football2-dd6v.onrender.com/" class="hover:underline">FootClub™</a>. Все права защищены.</span>
     </div>
 </footer>
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Сайт с синей полосой</title>
+  <style>
+    body {
+      margin: 0;
+      font-family: Arial, sans-serif;
+    }
+
+    .top-bar {
+      width: 100%;
+      height: 50px; /* высота полосы */
+      background-color: #007BFF; /* синий цвет */
+    }
+
+    .content {
+      padding: 20px;
+    }
+  </style>
+</head>
+<body>
 
