--- a/football.html
+++ b/football.html
@@ -133,3 +133,6 @@
         <span class="block text-sm text-gray-500 sm:text-center dark:text-gray-400">© 2025 <a href="https://football2-dd6v.onrender.com/" class="hover:underline">FootClub™</a>. Все права защищены.</span>
     </div>
 </footer>
+<meta charset="UTF-8">
+
+    
