--- a/schedule.html
+++ b/schedule.html
@@ -41,7 +41,35 @@
     </div>
   </div>
 </nav>
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Сайт с синей полосой</title>
+  <style>
+    body {
+      margin: 0;
+      font-family: Arial, sans-serif;
+    }
 
+    .top-bar {
+      width: 100%;
+      height: 50px; /* высота полосы */
+      background-color: #007BFF; /* синий цвет */
+    }
+
+    .content {
+      padding: 20px;
+    }
+  </style>
+</head>
+<body>
+
+  <div class="top-bar"></div>
+
+  <div class="content">
+   
 </body>
 </html>
 <section class="bg-white dark:bg-gray-900 antialiased">
@@ -69,7 +97,7 @@
       <div class="-my-4 divide-y divide-gray-200 dark:divide-gray-700">
         <div class="flex flex-col gap-2 py-4 sm:gap-6 sm:flex-row sm:items-center">
           <p class="w-32 text-lg font-normal text-gray-500 sm:text-right dark:text-gray-400 shrink-0">
-            08:00 - 11:00
+            8:00- 11:00
           </p>
           <h3 class="text-lg font-semibold text-gray-900 dark:text-white">
             <a href="#" class="hover:underline">Обычная тренировка</a>
