--- a/about.html
+++ b/about.html
@@ -159,19 +159,19 @@ l>
         // Массив с примерными новостями (можно заменить на данные из API)
         const newsData = [
             {
-                title: "Вратарь-гигант уйдёт из «Металлурга» в «Рязань»",
-                description: "Вратарь «Металлурга» Дмитрий Вялов намерен продолжить карьеру в «Рязани», которая станет соперницей липчан в предстоящем сезоне.",
-                link: "https://gorod48.ru/news/1966335/"
+                title: "Титов предложил ставку на игру РПЛ «Локомотив» — ЦСКА: «Надо вселить надежду в болельщиков перед следующим сезоном»",
+                description: "Известный футболист, бывший игрок «Спартака» и сборной России Егор Титов предложил ставку на московское дерби «Локомотив» — ЦСКА, закрывающее предпоследний тур Премьер-лиги.",
+                link: "https://sport24.ru/football/news-752430-titov-predlozhil-stavku-na-igru-rpl-lokomotiv-tsska-nado-vselit-nadezhdu-v-bolelshchikov-pered-sleduyushchim-sezonom"
             },
             {
-                title: "Футбол. Все голы Криштиану Роналду на чемпионатах мира",
-                description: "Португальский форвард стал первым футболистом, который забил голы на 5 чемпионатах мира",
-                link: "https://www.olympics.com/ru/news/futbol-krishtianu-ronaldu-na-chempionatah-mira"
+                title: "В России тренер футбольного клуба устроил истерику на пресс-конференции: «Посмотрите, что за бред происходит!»",
+                description: "Главный тренер владикавказской «Алании» Спартак Гогниев устроил истерику на пресс-конференции после матча в Набережных Челнах в рамках 33-го тура Первой лиги.",
+                link: "https://sport24.ru/football/news-752652-v-rossii-trener-futbolnogo-kluba-ustroil-isteriku-na-press-konferentsii-posmotrite-chto-za-bred-proiskhodit"
             },
             {
-                title: "Константин Гусев, OLIMPBET: «Футбол остается самым популярным видом спорта в России»",
-                description: "ВЦИОМ сообщил о снижении интереса к футболу: доля болельщиков упала с 19% в 2005 году до 4% в 2024-м. Минспорта оспорил объективность данных, ссылаясь на стабильную посещаемость матчей. О реальной популярности футбола «НИ» рассказал директор по развитию OLIMPBET Константин Гусев.",
-                link: "https://newizv.ru/news/2024-10-04/konstantin-gusev-olimpbet-futbol-ostaetsya-samym-populyarnym-vidom-sporta-v-rossii-433588"
+                title: "Брайтон – Ливерпуль – 3:2. Обзор матча и видео голов",
+                description: "Результат и подробности матча Брайтон - Ливерпуль (Англия — Премьер-лига. 37-й тур), который состоялся 19 мая 2025 года. В нашем обзоре вы найдете информацию о забитых голах, видеообзор матча, счет и состав команд. ",
+                link: "https://fclm.news/online/131315-brayton-liverpul-video.html"
             }
         ];
 
