--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Футбольный Клуб</title>
+  <title>Главная</title>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-white text-gray-900 font-sans">
@@ -65,6 +65,7 @@
       </ul>
     </div>
   </nav>
+
 
   <!-- Главный баннер -->
   <header class="bg-cover bg-center h-screen" style="background-image: url('https://images.unsplash.com/photo-1517962785197-5be8b2daab29?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1170&q=80');">
@@ -137,4 +138,3 @@
         <hr class="my-6 border-gray-200 sm:mx-auto dark:border-gray-700 lg:my-8" />
         <span class="block text-sm text-gray-500 sm:text-center dark:text-gray-400">© 2025 <a href="https://football2-dd6v.onrender.com/" class="hover:underline">FootClub™</a>. Все права защищены.</span>
     </div>
-</footer>
