--- a/Contact.html
+++ b/Contact.html
@@ -48,7 +48,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Сайт с синей полосой</title>
+  <title>Контакты</title>
   <style>
     body {
       margin: 0;
