--- a/about.html
+++ b/about.html
@@ -48,7 +48,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Футбольные новости</title>
+    <title>О футболе</title>
     <style>
         /* Общие стили */
         body {
