--- a/schedule.html
+++ b/schedule.html
@@ -47,7 +47,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Сайт с синей полосой</title>
+  <title>Расписание</title>
   <style>
     body {
       margin: 0;
