--- a/schedule.html
+++ b/schedule.html
@@ -70,8 +70,9 @@
   <div class="top-bar"></div>
 
   <div class="content">
-   
+   <script src="https://cdn.jsdelivr.net/npm/flowbite@3.1.2/dist/flowbite.min.js"></script>
 </body>
+
 </html>
 <section class="bg-white dark:bg-gray-900 antialiased">
   <div class="max-w-screen-xl px-4 py-8 mx-auto lg:px-6 sm:py-16 lg:py-24">
