--- a/Contact.html
+++ b/Contact.html
@@ -161,6 +161,7 @@
         <!-- Блок для отображения сообщений -->
         <div id="messageBox"></div>
     </div>
+<script src="https://cdn.jsdelivr.net/npm/flowbite@3.1.2/dist/flowbite.min.js"></script>
 </body>
 </html>
  <div class="w-full max-w-screen-xl mx-auto p-4 md:py-8">
