--- a/about.html
+++ b/about.html
@@ -266,5 +266,6 @@ l>
     }
   </style>
 </head>
+<script src="https://cdn.jsdelivr.net/npm/flowbite@3.1.2/dist/flowbite.min.js"></script>
 <body>
 
