--- a/football.html
+++ b/football.html
@@ -50,6 +50,7 @@
   <title>Главная</title>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
+<script src="https://cdn.jsdelivr.net/npm/flowbite@3.1.2/dist/flowbite.min.js"></script>
 <body class="bg-white text-gray-900 font-sans">
 
   <!-- Навигационная панель -->
