--- a/index.html
+++ b/index.html
@@ -6,9 +6,8 @@
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
-
   <div class="content">
-   
+
 <nav class="bg-white border-gray-200 dark:bg-gray-900">
   <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
     <a href="https://football2-dd6v.onrender.com" class="flex items-center space-x-3 rtl:space-x-reverse">
@@ -65,7 +64,36 @@
       </ul>
     </div>
   </nav>
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+  <meta charset="UTF-8">
+  <title>Фоновая картинка</title>
+  <style>
+    body {
+      margin: 0;
+      padding: 0;
+      min-height: 100vh;
+      background-image: url('https://via.placeholder.com/1920x1080 '); /* */
+      background-size: cover;
+      background-position: center;
+      background-repeat: no-repeat;
+      background-attachment: fixed; /* Фиксирует фон при скролле */
+      font-family: Arial, sans-serif;
+      color: white;
+      text-align: center;
+    }
 
+    h1 {
+      padding-top: 20vh;
+      font-size: 3em;
+      text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.7);
+    }
+  </style>
+</head>
+<body>
+</body>
+</html>
 
   <!-- Главный баннер -->
   <header class="bg-cover bg-center h-screen" style="background-image: url('https://images.unsplash.com/photo-1517962785197-5be8b2daab29?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1170&q=80');">
@@ -138,3 +166,5 @@
         <hr class="my-6 border-gray-200 sm:mx-auto dark:border-gray-700 lg:my-8" />
         <span class="block text-sm text-gray-500 sm:text-center dark:text-gray-400">© 2025 <a href="https://football2-dd6v.onrender.com/" class="hover:underline">FootClub™</a>. Все права защищены.</span>
     </div>
+  <script src="https://cdn.jsdelivr.net/npm/flowbite@3.1.2/dist/flowbite.min.js"></script>
+<body
