--- a/prise.html
+++ b/prise.html
@@ -273,6 +273,7 @@
       </div>
 
 </body>
+<script src="https://cdn.jsdelivr.net/npm/flowbite@3.1.2/dist/flowbite.min.js"></script>
 </html>
 
     <div class="w-full max-w-screen-xl mx-auto p-4 md:py-8">
